dark mode light mode beta

--- a/public/projectData.json
+++ b/public/projectData.json
@@ -163,6 +163,22 @@
         "projectLiveSite": "https://shahriar-travellio.web.app/",
         "projectClientCode": "https://github.com/shahriarmehedi/travellio-mern-travel-review-client",
         "projectServerCode": "https://github.com/shahriarmehedi/travellio-mern-travel-review-server"
+    },
+    {
+        "projectId": "12",
+        "projectName": "Radiant Academy",
+        "projectType": "Coding Learning Platform",
+        "projectCategory": "Fullstack",
+        "next": true,
+        "projectTime": "February, 2022",
+        "projectDescription": "[Currently running] This website is dedicated to tech and curious learners. They can learn and increase their knowledge by answering our questions and by helping others. Anyone can test their knowledge here. ",
+        "projectDetails": "This website is dedicated to tech and curious learners. They can learn and increase their knowledge by answering our questions and by helping others. Anyone can test their knowledge here. They can also make decisions for their future career. Premium users will get more features.",
+        "projectIMG": "https://i.ibb.co/cbccqDc/RA.png",
+        "projectIMG2": "",
+        "projectIMG3": "",
+        "projectLiveSite": "https://radiant-academy.vercel.app/",
+        "projectClientCode": "https://github.com/Nashtarin/Radiant-Academy",
+        "projectServerCode": "https://github.com/Nashtarin/Radiant-Academy"
     }
 
 ]
